add third section

--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;0,900;1,400&family=Work+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;0,900;1,400&family=Work+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
     <header>
-
+      <div class="background">
+        <div class="overlay">
+          <div class="content">
+            <p>Happy New Year</p>
+            <h1>New Year Party Celebration</h1>
+          </div>
+        </div>
+      </div>
+      <section>
+        <div class="second-part">
+          <div clas="second-content">
+            <h1 id="mega">65% OFF</h1>
+            <p id="pragraph">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3 id="header">ALL CATEGORIES</h3>
+            <div>
+              <img src="resources/New Year Photo.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="third-section">
+          <div class="third-div">
+            <div class="third-content">
+              <h1 class="third-header">Welcome to midnight party</h1>
+              <p class="third-pragraph">
+                At the stroke of midnight, the veil of mystery descends,
+                welcoming all to a clandestine affair. Masks adorn faces,
+                concealing identities in a symphony of secrecy.
+              </p>
+              <button class="third-btn">Join Now</button>
+            </div>
+            <div class="front-img">
+                <img class="front-image" src="resources/Group 70.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
-    
-</body>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
