--- a/index.html
+++ b/index.html
@@ -52,6 +52,48 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="four-content">
+          <div class="four-header">
+            <h2 class="four-title"><span class="red-title">Place:</span>New Park Hotel <br>
+            <span class="red-title">Date:</span>31 December Night 2023<br>
+            <span class="red-title">Time:</span>Evening 7.30 pm to 12.30 am
+            </h2>
+            <button class="btn">Join Now</button>
+          </div>
+        </div>
+      </section>
+      <div class="awesome">
+        <div class="awesome-section">
+            <h4 class="best-gift">THE BEST GIFTS</h4>
+            <h3 class="awesome-title">Our Awesome Portfolio</h3>
+            <p class="awesome-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="image-glary">
+            <img src="resources/Rectangle 3.png" alt="" class="images-box">
+            <img src="resources/Rectangle 4.png" alt="" class="images-box">
+            <img src="resources/Rectangle 5.png" alt="" class="images-box">
+        </div>
+        <div class="image-glary">
+            <img src="resources/Rectangle 6.png" alt="" class="images-box">
+            <img src="resources/Rectangle 7.png" alt="" class="images-box">
+            <img src="resources/Rectangle 8.png" alt="" class="images-box">
+        </div>
+    </div>
+
+    <div class="newsletter">
+        <div class="newsletter-section">
+            <img src="resources/Group 61.png" alt="" class="email-images">
+            <h2 class="subcribe-titel">Subscribe Newsletter</h2>
+            <p class="newsletter-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="button" value="Subscribe" id="subscribe">
+        </div>
+    </div>
+</main>
+
     </header>
     <main></main>
     <footer></footer>
