--- a/index.html
+++ b/index.html
@@ -95,7 +95,44 @@
 </main>
 
     </header>
-    <main></main>
-    <footer></footer>
+    
+    <footer>
+      <footer>
+        <footer class="footer">
+            <div class="footer-section">
+                <p class="footer-text">44, Big Building Roosevelt<br> Street
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div class="footer-section">
+                <p class="footer-text"><i class="fa-solid fa-phone-volume"></i> +00 123 584 124 <br> <i
+                        class="fa-solid fa-globe"></i> www.website.com</p>
+            </div>
+
+        </footer>
+        <footer>
+            <hr>
+        </footer>
+
+        <div class="socail-list">
+            <div class="socail-sahrer">
+                <img src="resources/Facebook.png" alt="" id="images-socail">
+                <img src="resources/Instagram.png" alt="" id="images-socail">
+                <img src="resources/Twitter.png" alt="" id="images-socail">
+                <img src="resources/Linkedin.png" alt="" id="images-socail">
+            </div>
+        </div>
+        <footer>
+            <hr>
+        </footer>
+        <footer class="footer">
+            <div class="footer-section">
+                <p class="footer-text-recive-last">2017, All Rights Reserved.</p>
+            </div>
+            <div class="footer-section">
+                <button class="unsubscribe">Unsubscribe</button>
+            </div>
+
+        </footer>
+    </footer>
   </body>
 </html>
